Modify some Git stuff

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
-# OSX
+# Mac OS X
 # =========================
 
 .DS_Store
